feat: opening url from code

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "opg.helloWorld",
-        "title": "Hello World"
+        "command": "opg.start",
+        "title": "opg"
       }
     ]
   },
