feat: set up monorepo

--- a/package.json
+++ b/package.json
@@ -1,55 +1,11 @@
 {
-  "name": "opg",
-  "displayName": "open-git",
-  "description": "Open Git repository",
-  "author": "Reetesh Dooleea",
-  "publisher": "ReeteshDooleea",
-  "version": "0.0.13",
+  "name": "open-git",
+  "version": "1.0.0",
+  "description": "Extension that opens the current Git remote repository in the browser in a single command.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/keshavDooleea/open-git"
+    "url": "git+https://github.com/keshavDooleea/open-git.git"
   },
-  "engines": {
-    "vscode": "^1.75.0"
-  },
-  "categories": [
-    "Other"
-  ],
-  "activationEvents": [],
-  "main": "./dist/extension.js",
-  "contributes": {
-    "commands": [
-      {
-        "command": "opg.start",
-        "title": "opg"
-      }
-    ]
-  },
-  "scripts": {
-    "vscode:prepublish": "npm run package",
-    "compile": "webpack",
-    "watch": "webpack --watch",
-    "package": "webpack --mode production --devtool hidden-source-map",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
-  },
-  "devDependencies": {
-    "@types/glob": "^8.1.0",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^16.18.12",
-    "@types/vscode": "^1.75.0",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "@vscode/test-electron": "^2.2.3",
-    "eslint": "^8.34.0",
-    "glob": "^8.1.0",
-    "mocha": "^10.2.0",
-    "ts-loader": "^9.4.2",
-    "typescript": "^4.9.5",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
-  }
+  "author": "Reetesh Dooleea",
+  "license": "ISC"
 }
