--- a/shared/package.json
+++ b/shared/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "scripts": {
+    "build": "tsc --build"
+  },
   "devDependencies": {
     "typescript": "^4.9.4"
   }
