feat: refactored project to add support to open git files

--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "contributes": {
     "commands": [
       {
-        "command": "opg.start",
-        "title": "opg"
+        "command": "open-git-dir",
+        "title": "Open Git Directory"
+      },
+      {
+        "command": "open-git-file",
+        "title": "Open Git File"
       }
     ]
   },
