--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Open Git repository",
   "author": "Reetesh Dooleea",
   "publisher": "ReeteshDooleea",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "repository": {
     "type": "git",
     "url": "https://github.com/keshavDooleea/open-git"
@@ -29,7 +29,7 @@
       },
       {
         "command": "open-git-file-master",
-        "title": "OPG: Open File (master)"
+        "title": "OPG: Open File (default branch)"
       }
     ]
   },
