feat: added Compare default branch with current branch feature

--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
       {
         "command": "open-git-file-master",
         "title": "OPG: Open File (default branch)"
+      },
+      {
+        "command": "open-git-compare",
+        "title": "OPG: Compare (default & current branch)"
       }
     ]
   },
