--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Open Git repository",
   "author": "Reetesh Dooleea",
   "publisher": "ReeteshDooleea",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "repository": {
     "type": "git",
     "url": "https://github.com/keshavDooleea/open-git"
@@ -33,7 +33,7 @@
       },
       {
         "command": "open-git-compare",
-        "title": "OPG: Compare (default & current branch)"
+        "title": "OPG: Compare"
       }
     ]
   },
